--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "vitepress": "^1.0.1"
   },
   "scripts": {
-    "docs:dev": "vitepress dev",
+    "docs:dev": "vitepress dev --port=7777",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
   },
