--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Mybatis", "println", "typeof", "zhuangzi"]
+  "cSpell.words": [
+    "MVVM",
+    "Mybatis",
+    "println",
+    "typeof",
+    "vben",
+    "zhuangzi"
+  ]
 }
